# gabloctica

./: .gitignore  Cargo.toml  readme.md  scripting.md
assets/: .gitignore  blocks.txt  texture.xcf
assets/scripts/: chair.txt  engine.txt  fire.txt
scripts/: block-orientations.py
src/: main.rs
src/game/: entity.rs  mod.rs
src/game/galaxy/: mod.rs
src/game/object/: chunk.rs  internals.rs  loader.rs  mod.rs  planet.rs
src/game/object/computer/: compiler.rs  machine.rs  mod.rs
src/game/planet/: atmosphere.rs  mod.rs  ocean.rs  terrain.rs
src/game/shading/: mod.rs
src/graphics/: block.rs  camera.rs  chunk.rs  components.rs  font.rs  grid.rs  lighting.rs  mod.rs  shader.rs  texture.rs  vertex.rs
src/graphics/resource/: buffer.rs  mod.rs  texture.rs
src/graphics/shaders/: shader.wgsl
src/physics/: mod.rs  rigid_body.rs
src/physics/collisions/: algo.rs  mod.rs  shapes.rs
src/quahog/: mod.rs
src/shaders/: block.wgsl  flat.wgsl  font.wgsl  lib.wgsl  post.wgsl  shader.wgsl  shadow.wgsl
src/util/: interp.rs  mod.rs  vendor.rs
