[package]
name = "gabloctica"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
cgmath = "0.18.0"
env_logger = "0.11.8"
faer = "0.23.2"
image = "0.25.9"
log = "0.4.29"
pollster = "0.4.0"
rustc-hash = "2.1.1"
wgpu = "26.0.1"
winit = "0.30.12"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen-futures = "0.4.49"

[profile.dev.package.faer]
opt-level = 3